--- a/views/status.ejs
+++ b/views/status.ejs
@@ -3,10 +3,10 @@
   <head>
     <title>Status</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <script src="/libs/jquery-3.2.1.slim.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+    <link rel="stylesheet" href="/libs/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+    <script src="/libs/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>Hosts</h1>
@@ -19,7 +19,7 @@
       </li>
       <div class="collapse" id="<%= host.name %>-collapse">
         <% host.services.forEach( function (service) { %>
-          <li id="<%= host.name %>-<%= service.name%>"class="list-group-item d-flex justify-content-between align-items-center"><%= service.name %> 
+          <li id="<%= host.name %>-<%= service.name%>"class="list-group-item d-flex justify-content-between align-items-center"><%= service.name %>
             <span if="<%= host.name %>-<%= service.name%>-badge"class="badge badge-danger">down</span></li>
         <% }) %>
       </div>
